@@ -65,7 +65,39 @@ name|hbase
 operator|.
 name|hql
 operator|.
+name|Constants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|hql
+operator|.
 name|HQLClient
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|hql
+operator|.
+name|HQLSecurityManager
 import|;
 end_import
 
@@ -98,22 +130,6 @@ operator|.
 name|hql
 operator|.
 name|ReturnMsg
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|hql
-operator|.
-name|HQLSecurityManager
 import|;
 end_import
 
@@ -188,9 +204,17 @@ decl_stmt|;
 specifier|public
 specifier|static
 name|String
-name|MASTER_ADDRESS
+name|IP
 init|=
 literal|null
+decl_stmt|;
+specifier|public
+specifier|static
+name|int
+name|PORT
+init|=
+operator|-
+literal|1
 decl_stmt|;
 specifier|public
 specifier|static
@@ -198,20 +222,6 @@ name|String
 name|HTML_OPTION
 init|=
 literal|null
-decl_stmt|;
-specifier|public
-specifier|static
-name|int
-name|RELAUNCH_FLAG
-init|=
-literal|7
-decl_stmt|;
-specifier|public
-specifier|static
-name|int
-name|EXIT_FLAG
-init|=
-literal|9999
 decl_stmt|;
 comment|/** Return the boolean value indicating whether end of command or not */
 specifier|static
@@ -434,7 +444,7 @@ literal|"UTF-8"
 argument_list|)
 decl_stmt|;
 name|TableFormatter
-name|tableFormater
+name|tableFormatter
 init|=
 operator|new
 name|TableFormatterFactory
@@ -449,39 +459,12 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|MASTER_ADDRESS
-operator|!=
-literal|null
-condition|)
-block|{
-name|conf
-operator|.
-name|set
-argument_list|(
-literal|"hbase.master"
-argument_list|,
-name|MASTER_ADDRESS
-operator|.
-name|substring
-argument_list|(
-literal|9
-argument_list|,
-name|MASTER_ADDRESS
-operator|.
-name|length
-argument_list|()
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
 name|HTML_OPTION
 operator|!=
 literal|null
 condition|)
 block|{
-name|tableFormater
+name|tableFormatter
 operator|=
 operator|new
 name|HtmlTableFormatter
@@ -498,7 +481,7 @@ name|HelpCommand
 argument_list|(
 name|out
 argument_list|,
-name|tableFormater
+name|tableFormatter
 argument_list|)
 decl_stmt|;
 if|if
@@ -521,9 +504,9 @@ name|String
 operator|.
 name|valueOf
 argument_list|(
-name|Shell
+name|Constants
 operator|.
-name|RELAUNCH_FLAG
+name|FLAG_RELAUNCH
 argument_list|)
 argument_list|)
 condition|)
@@ -543,6 +526,23 @@ argument_list|()
 decl_stmt|;
 name|String
 name|extendedLine
+decl_stmt|;
+name|HQLClient
+name|hql
+init|=
+operator|new
+name|HQLClient
+argument_list|(
+name|conf
+argument_list|,
+name|IP
+argument_list|,
+name|PORT
+argument_list|,
+name|out
+argument_list|,
+name|tableFormatter
+argument_list|)
 decl_stmt|;
 while|while
 condition|(
@@ -587,21 +587,6 @@ name|System
 operator|.
 name|currentTimeMillis
 argument_list|()
-decl_stmt|;
-name|HQLClient
-name|hql
-init|=
-operator|new
-name|HQLClient
-argument_list|(
-name|conf
-argument_list|,
-name|MASTER_ADDRESS
-argument_list|,
-name|out
-argument_list|,
-name|tableFormater
-argument_list|)
 decl_stmt|;
 name|ReturnMsg
 name|rs
@@ -768,12 +753,51 @@ literal|"--master:"
 argument_list|)
 condition|)
 block|{
-name|MASTER_ADDRESS
-operator|=
+name|String
+index|[]
+name|address
+init|=
 name|args
 index|[
 name|i
 index|]
+operator|.
+name|substring
+argument_list|(
+literal|9
+argument_list|,
+name|args
+index|[
+name|i
+index|]
+operator|.
+name|length
+argument_list|()
+argument_list|)
+operator|.
+name|split
+argument_list|(
+literal|":"
+argument_list|)
+decl_stmt|;
+name|IP
+operator|=
+name|address
+index|[
+literal|0
+index|]
+expr_stmt|;
+name|PORT
+operator|=
+name|Integer
+operator|.
+name|valueOf
+argument_list|(
+name|address
+index|[
+literal|1
+index|]
+argument_list|)
 expr_stmt|;
 block|}
 elseif|else
