@@ -17,105 +17,40 @@ name|hql
 package|;
 end_package
 
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|Writer
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|HBaseConfiguration
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hbase
-operator|.
-name|Shell
-import|;
-end_import
+begin_comment
+comment|/**  * Some constants used in the hql.   */
+end_comment
 
 begin_class
 specifier|public
 class|class
-name|ExitCommand
-extends|extends
-name|BasicCommand
-block|{
-specifier|public
-name|ExitCommand
-parameter_list|(
-name|Writer
-name|o
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|o
-argument_list|)
-expr_stmt|;
-block|}
-specifier|public
-name|ReturnMsg
-name|execute
-parameter_list|(
-annotation|@
-name|SuppressWarnings
-argument_list|(
-literal|"unused"
-argument_list|)
-name|HBaseConfiguration
-name|conf
-parameter_list|)
-block|{
-comment|// TOD: Is this the best way to exit? Would be a problem if shell is run
-comment|// inside another program -- St.Ack 09/11/2007
-name|System
-operator|.
-name|exit
-argument_list|(
 name|Constants
-operator|.
-name|FLAG_EXIT
-argument_list|)
-expr_stmt|;
-return|return
-literal|null
-return|;
-block|}
-annotation|@
-name|Override
-specifier|public
-name|CommandType
-name|getCommandType
-parameter_list|()
 block|{
-return|return
-name|CommandType
-operator|.
-name|SHELL
-return|;
-block|}
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|FLAG_RELAUNCH
+init|=
+literal|7
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|FLAG_EXIT
+init|=
+literal|9999
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|ERROR_CODE
+init|=
+operator|-
+literal|1
+decl_stmt|;
 block|}
 end_class
 
