@@ -95,30 +95,32 @@ name|TokenMgrError
 import|;
 end_import
 
+begin_comment
+comment|/**  * HQL query language service client interfaces.  */
+end_comment
+
 begin_class
 specifier|public
 class|class
 name|HQLClient
 block|{
-specifier|public
-specifier|static
-name|String
-name|MASTER_ADDRESS
-init|=
-literal|null
-decl_stmt|;
 specifier|static
 name|HBaseConfiguration
 name|conf
 decl_stmt|;
 specifier|static
 name|TableFormatter
-name|tableFormater
+name|tableFormatter
+init|=
+literal|null
 decl_stmt|;
 specifier|static
 name|Writer
 name|out
+init|=
+literal|null
 decl_stmt|;
+comment|/**    * Constructor    *      * @param config HBaseConfiguration    * @param ip IP Address    * @param port port number    * @param writer writer    * @param formatter table formatter    */
 specifier|public
 name|HQLClient
 parameter_list|(
@@ -126,10 +128,13 @@ name|HBaseConfiguration
 name|config
 parameter_list|,
 name|String
-name|master
+name|ip
+parameter_list|,
+name|int
+name|port
 parameter_list|,
 name|Writer
-name|output
+name|writer
 parameter_list|,
 name|TableFormatter
 name|formatter
@@ -139,19 +144,40 @@ name|conf
 operator|=
 name|config
 expr_stmt|;
+if|if
+condition|(
+name|ip
+operator|!=
+literal|null
+operator|&&
+name|port
+operator|!=
+operator|-
+literal|1
+condition|)
+name|conf
+operator|.
+name|set
+argument_list|(
+literal|"hbase.master"
+argument_list|,
+name|ip
+operator|+
+literal|":"
+operator|+
+name|port
+argument_list|)
+expr_stmt|;
 name|out
 operator|=
-name|output
+name|writer
 expr_stmt|;
-name|tableFormater
+name|tableFormatter
 operator|=
 name|formatter
 expr_stmt|;
-name|MASTER_ADDRESS
-operator|=
-name|master
-expr_stmt|;
 block|}
+comment|/**    * Executes query.    *     * @param query    * @return ReturnMsg object    */
 specifier|public
 name|ReturnMsg
 name|executeQuery
@@ -170,11 +196,11 @@ name|query
 argument_list|,
 name|out
 argument_list|,
-name|tableFormater
+name|tableFormatter
 argument_list|)
 decl_stmt|;
 name|ReturnMsg
-name|rs
+name|msg
 init|=
 literal|null
 decl_stmt|;
@@ -195,7 +221,7 @@ operator|!=
 literal|null
 condition|)
 block|{
-name|rs
+name|msg
 operator|=
 name|cmd
 operator|.
@@ -212,34 +238,16 @@ name|ParseException
 name|pe
 parameter_list|)
 block|{
-name|String
-index|[]
 name|msg
-init|=
-name|pe
-operator|.
-name|getMessage
-argument_list|()
-operator|.
-name|split
-argument_list|(
-literal|"[\n]"
-argument_list|)
-decl_stmt|;
-name|rs
 operator|=
 operator|new
 name|ReturnMsg
 argument_list|(
-operator|-
-literal|9
+name|Constants
+operator|.
+name|ERROR_CODE
 argument_list|,
-literal|"Syntax error : Type 'help;' for usage.\nMessage : "
-operator|+
-name|msg
-index|[
-literal|0
-index|]
+literal|"Syntax error : Type 'help;' for usage."
 argument_list|)
 expr_stmt|;
 block|}
@@ -249,39 +257,21 @@ name|TokenMgrError
 name|te
 parameter_list|)
 block|{
-name|String
-index|[]
 name|msg
-init|=
-name|te
-operator|.
-name|getMessage
-argument_list|()
-operator|.
-name|split
-argument_list|(
-literal|"[\n]"
-argument_list|)
-decl_stmt|;
-name|rs
 operator|=
 operator|new
 name|ReturnMsg
 argument_list|(
-operator|-
-literal|9
+name|Constants
+operator|.
+name|ERROR_CODE
 argument_list|,
-literal|"Lexical error : Type 'help;' for usage.\nMessage : "
-operator|+
-name|msg
-index|[
-literal|0
-index|]
+literal|"Lexical error : Type 'help;' for usage."
 argument_list|)
 expr_stmt|;
 block|}
 return|return
-name|rs
+name|msg
 return|;
 block|}
 block|}
