@@ -100,9 +100,9 @@ if|if
 condition|(
 name|status
 operator|!=
-name|Shell
+name|Constants
 operator|.
-name|EXIT_FLAG
+name|FLAG_EXIT
 condition|)
 block|{
 comment|// throw new ExitException(status);
@@ -136,9 +136,9 @@ name|String
 operator|.
 name|valueOf
 argument_list|(
-name|Shell
+name|Constants
 operator|.
-name|RELAUNCH_FLAG
+name|FLAG_RELAUNCH
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -163,17 +163,32 @@ if|if
 condition|(
 name|Shell
 operator|.
-name|MASTER_ADDRESS
+name|IP
 operator|!=
 literal|null
+operator|&&
+name|Shell
+operator|.
+name|PORT
+operator|!=
+operator|-
+literal|1
 condition|)
 name|argList
 operator|.
 name|add
 argument_list|(
+literal|"--master:"
+operator|+
 name|Shell
 operator|.
-name|MASTER_ADDRESS
+name|IP
+operator|+
+literal|":"
+operator|+
+name|Shell
+operator|.
+name|PORT
 argument_list|)
 expr_stmt|;
 try|try
